--- a/.env.testing
+++ b/.env.testing
@@ -1,12 +1,11 @@
 APP_ENV=testing
+APP_KEY=base64:vEo63xtdRE0ELfKk7suCDedWhqEh8GqRu3ZvSDAsOQI=
+APP_DEBUG=true
+APP_URL=http://app.test
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=test_db_name
+DB_DATABASE=your_test_db_name
 DB_USERNAME=root
 DB_PASSWORD=
-
-CACHE_DRIVER=array
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=array
-APP_KEY=base64:HIH3aAmc0p1+U6xjWyTC1fvT9pzEQdaOjODoeYo37wQ=
